--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,13 @@
             <version>0.21.1-s_2.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.scalamock</groupId>
+            <artifactId>scalamock_2.11</artifactId>
+            <version>4.4.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
