trying to add git commit id

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /src/main/external_resources/DBLPData/phdthesis.json
 /src/main/external_resources/DBLPData/proceedings.json
 /src/main/external_resources/DBLPData/www.json
+.DS_Store
