--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
         </license>
     </licenses>
 
+    <scm>
+        <connection>scm:git:https://gitlab-as.informatik.uni-stuttgart.de/de/structural-provenance/nested-why-not-spark</connection>
+    </scm>
+
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -146,6 +150,7 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>buildnumber-maven-plugin</artifactId>
@@ -163,6 +168,26 @@
                     <addOutputDirectoryToResources>true</addOutputDirectoryToResources>
                 </configuration>
             </plugin>
+            -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <doCheck>true</doCheck>
+                    <doUpdate>false</doUpdate>
+                    <shortRevisionLength>10</shortRevisionLength>
+                    <attach>true</attach>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -178,7 +203,6 @@
                                 <manifestEntries>
                                     <Implementation-Version>${project.version}</Implementation-Version>
                                     <Implementation-SCM-Revision>${buildNumber}</Implementation-SCM-Revision>
-                                    <!--<Implementation-SCM-Branch>${scmBranch}</Implementation-SCM-Branch>-->
                                 </manifestEntries>
                             </manifestSection>
                         </manifestSections>
