added reference scenario for tpch

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@
 /src/main/external_resources/DBLPData/proceedings.json
 /src/main/external_resources/DBLPData/www.json
 .DS_Store
+/src/main/external_resources/TPCH/customer.tbl
+/src/main/external_resources/TPCH/lineitem.tbl
+/src/main/external_resources/TPCH/nation.tbl
+/src/main/external_resources/TPCH/orders.tbl
+/src/main/external_resources/TPCH/partsupp.tbl
+/src/main/external_resources/TPCH/partx.tbl
+/src/main/external_resources/TPCH/region.tbl
+/src/main/external_resources/TPCH/supplier.tbl
